data/derived/comb/progs/unify/prog1015.ml.out
Characters 633-640:
  in let my_log = fun l' -> let l = (min 0.1 l') in (log l) / (log 10.0)
                                                    ^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
